<resources>
    <string name="app_name">Organizer</string>
    <string name="grocery_list">Grocery List</string>
    <string name="check_box">This is where you can add in stuff for the list until is become full. You can also add in a second line if it goes too long.</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="tester_1">tester 1</string>
    <string name="tester_button_1">tester button 1</string>
    <string name="tester_2">tester 2</string>
    <string name="tester_button_2">tester button 2</string>
    <string name="checkBox">hello there is a lot of text in here and I don\'t know if it\'s going to wrap so I\'m going to check it out now tada</string>
    <string name="checkbox2">Ok here\'s another item to be added</string>
    <string name="button2">Button</string>
    <string name="all_lists">All Lists</string>
    <string name="checkbox_Main1">CheckBox</string>
    <string name="checkbox_Main2">CheckBox</string>
    <string name="text_Main2">List 1</string>
    <string name="text_Main1">List 2</string>
    <string name="checkbox5">CheckBox</string>
    <string name="list_3">List 3</string>
    <string name="list_4">List 4</string>
    <string name="checkbox3">CheckBox</string>
    <string name="checkbox6">CheckBox</string>
    <string name="add_item">Add Item</string>
    <string name="add_new_task">Add new task</string>
    <string name="hint">hint</string>
    <string name="add_new_item">Add new item</string>
    <string name="checkbox9">checkbox9</string>


</resources>
